# ReviewEngine

./: .gitignore  Pipfile  README.md  amz_reviews.csv  amz_scraper.py  app.py  app_cr.py  autoscraper_output_format.txt  cust_reviews.yml  cust_reviews_05312024.yml  cust_reviews_summary.py  customer_reviews-Krish.ipynb  customer_reviews-Krish.py  customer_reviews.html  customer_reviews.ipynb  customer_reviews.md  customer_reviews.py  data output.csv  data_output  pyproject.toml  user_inputs.py
.ipynb_checkpoints/: autoscraper_output_format-checkpoint.txt  customer_reviews-checkpoint.ipynb
archive/: customer_reviews.ipynb  user_inputs_cra.py
customer_reviews/: amazon_scraper.py  reviews_summary.py
review_docs/: amazon_reviews_df  amazon_reviews_df_OLD  amz_reviews.txt  data output  data output_OLD
src/: reviews_summary.py
